<resources>
    <string name="app_name">9ポスト</string>

    <!-- menu -->
    <string name="action_new">新着</string>
    <string name="action_ninki">人気</string>
    <string name="action_settings">設定</string>
    <string name="action_facebook_page">Facebookページ</string>
    <string name="action_play_page">アプリを評価</string>

    <!-- SettingsActivity -->
    <string name="toggle">通知</string>
    <string name="toggle_description">プッシュ通知を設定します。</string>

    <!-- YouTube -->
    <string name="error_player">YouTubePlayerの起動ができませんでした。 (%1$s)</string>


    <string name="hello_world">Hello world!</string>

</resources>
